.helm/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-basic
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: simplestore-graphql-api.local
    http:
      paths:
      - path: /
        backend:
          serviceName: graphql-api
          servicePort: 80
  - http:
      paths:
        - backend:
            serviceName: dapr-dashboard
            servicePort: 8080
